--- a/frontend/src/angular/src/app/financial-data/components/query-results/query-results.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/query-results/query-results.component.html
@@ -1,9 +1,11 @@
 <div class="container">
-  <div *ngIf="!!treeSymbolFinancials && treeSymbolFinancials.length > 0">
-    <app-result-tree
-      [symbolFinancials]="treeSymbolFinancials"
-    ></app-result-tree>
-  </div>
+  @if (!!treeSymbolFinancials && treeSymbolFinancials.length > 0) {
+    <div>
+      <app-result-tree
+        [symbolFinancials]="treeSymbolFinancials"
+      ></app-result-tree>
+    </div>
+  }
 
   <div [class.no-display]="!financialElements || financialElements.length <= 0">
     <mat-form-field>
@@ -13,81 +15,83 @@
         (keyup)="applyFilter($event)"
         placeholder="symbol"
         #myInput
-      />
+        />
     </mat-form-field>
 
     <mat-table [dataSource]="dataSource" class="mytable" matSort>
       <ng-container matColumnDef="concept">
         <mat-header-cell *matHeaderCellDef mat-sort i18n="@@queryResultsConcept"
           >Concept</mat-header-cell
-        >
-        <mat-cell *matCellDef="let element" matTooltip="{{ element.concept }}">
-          {{ element.concept }}
-        </mat-cell>
-      </ng-container>
+          >
+          <mat-cell *matCellDef="let element" matTooltip="{{ element.concept }}">
+            {{ element.concept }}
+          </mat-cell>
+        </ng-container>
 
-      <ng-container matColumnDef="symbol">
-        <mat-header-cell
-          *matHeaderCellDef
-          mat-sort-header
-          i18n="@@queryResultsSymbol"
-          >Symbol</mat-header-cell
-        >
-        <mat-cell *matCellDef="let element"> {{ element.symbol }} </mat-cell>
-      </ng-container>
+        <ng-container matColumnDef="symbol">
+          <mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            i18n="@@queryResultsSymbol"
+            >Symbol</mat-header-cell
+            >
+            <mat-cell *matCellDef="let element"> {{ element.symbol }} </mat-cell>
+          </ng-container>
 
-      <ng-container matColumnDef="year">
-        <mat-header-cell
-          *matHeaderCellDef
-          mat-sort-header
-          i18n="@@queryResultsYear"
-          >Year</mat-header-cell
-        >
-        <mat-cell *matCellDef="let element"> {{ element.year }} </mat-cell>
-      </ng-container>
+          <ng-container matColumnDef="year">
+            <mat-header-cell
+              *matHeaderCellDef
+              mat-sort-header
+              i18n="@@queryResultsYear"
+              >Year</mat-header-cell
+              >
+              <mat-cell *matCellDef="let element"> {{ element.year }} </mat-cell>
+            </ng-container>
 
-      <ng-container matColumnDef="quarter">
-        <mat-header-cell
-          *matHeaderCellDef
-          mat-sort-header
-          i18n="@@queryResultsQuarter"
-          >Quarter</mat-header-cell
-        >
-        <mat-cell *matCellDef="let element"> {{ element.quarter }} </mat-cell>
-      </ng-container>
+            <ng-container matColumnDef="quarter">
+              <mat-header-cell
+                *matHeaderCellDef
+                mat-sort-header
+                i18n="@@queryResultsQuarter"
+                >Quarter</mat-header-cell
+                >
+                <mat-cell *matCellDef="let element"> {{ element.quarter }} </mat-cell>
+              </ng-container>
 
-      <ng-container matColumnDef="currency">
-        <mat-header-cell
-          *matHeaderCellDef
-          mat-sort-header
-          i18n="@@queryResultsCurrency"
-          >Currency</mat-header-cell
-        >
-        <mat-cell *matCellDef="let element"> {{ element.currency }} </mat-cell>
-      </ng-container>
+              <ng-container matColumnDef="currency">
+                <mat-header-cell
+                  *matHeaderCellDef
+                  mat-sort-header
+                  i18n="@@queryResultsCurrency"
+                  >Currency</mat-header-cell
+                  >
+                  <mat-cell *matCellDef="let element"> {{ element.currency }} </mat-cell>
+                </ng-container>
 
-      <ng-container matColumnDef="value">
-        <mat-header-cell
-          *matHeaderCellDef
-          mat-sort-header
-          i18n="@@queryResultsValue"
-          >Value</mat-header-cell
-        >
-        <mat-cell *matCellDef="let element"> {{ element.value }} </mat-cell>
-      </ng-container>
+                <ng-container matColumnDef="value">
+                  <mat-header-cell
+                    *matHeaderCellDef
+                    mat-sort-header
+                    i18n="@@queryResultsValue"
+                    >Value</mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let element"> {{ element.value }} </mat-cell>
+                  </ng-container>
 
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-    </mat-table>
+                  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                  <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+                </mat-table>
 
-    <div *ngIf="dataSource?.filteredData?.length <= 0">
-      <span i18n="@@queryResultsNoMatchingData"
-        >No matching data found for filter: "{{ myInput.value }}"</span
-      >
-    </div>
-    <!-- 
-  {{ symbolFinancials | json }}
-  {{ financialElements | json }}
-   -->
-  </div>
-</div>
+                @if (dataSource?.filteredData?.length <= 0) {
+                  <div>
+                    <span i18n="@@queryResultsNoMatchingData"
+                      >No matching data found for filter: "{{ myInput.value }}"</span
+                      >
+                    </div>
+                  }
+                  <!--
+                  {{ symbolFinancials | json }}
+                  {{ financialElements | json }}
+                  -->
+                </div>
+              </div>
