--- a/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.html
@@ -1,117 +1,122 @@
 <div mat-dialog-content>
-  <form [formGroup]="symbolForm" novalidate *ngIf="!updatingQuotes">
-    <div class="grid-container">
-      <div><span i18n="@@changeSymbolName">Name: </span></div>
-      <div>
-        <span>{{ data.name }}</span>
+  @if (!updatingQuotes) {
+    <form [formGroup]="symbolForm" novalidate>
+      <div class="grid-container">
+        <div><span i18n="@@changeSymbolName">Name: </span></div>
+        <div>
+          <span>{{ data.name }}</span>
+        </div>
+        <div><span i18n="@@changeSymbolSymbol">Symbol: </span></div>
+        <div>
+          <span>{{ data.symbol }}</span>
+        </div>
+        <div><span i18n="@@changeSymbolCurrency">Currency: </span></div>
+        <div>
+          <span>{{ data.currencyKey }}</span>
+        </div>
       </div>
-      <div><span i18n="@@changeSymbolSymbol">Symbol: </span></div>
-      <div>
-        <span>{{ data.symbol }}</span>
-      </div>
-      <div><span i18n="@@changeSymbolCurrency">Currency: </span></div>
-      <div>
-        <span>{{ data.currencyKey }}</span>
-      </div>
-    </div>
-    <ul class="list-style">
-      @if (!deleteSymbol) {
-        <li>
-          <mat-form-field class="form-field">
-            <mat-label i18n="@@changeSymbolWeight">Weight</mat-label>
-            <input
-              matInput
-              type="text"
-              [formControlName]="FormFields.SymbolWeight"
-              i18n-placeholder="@@changeSymbolWeight"
-              placeholder="Weight"
-              tabindex="3"
-            />
-          </mat-form-field>
-        </li>
-        <li>
-          <mat-form-field>
-            <mat-label i18n="@@changeSymbolChangeDate">change date</mat-label>
-            <input
-              matInput
-              [matDatepicker]="picker1"
-              [formControlName]="FormFields.ChangedAt"
-            />
-            <mat-datepicker-toggle
-              matSuffix
-              [for]="picker1"
-            ></mat-datepicker-toggle>
-            <mat-datepicker #picker1></mat-datepicker>
-          </mat-form-field>
-        </li>
-      } @else {
-        <li>
-          <div class="delete-text" i18n="@@changeSymbolDeleteSymbol">
+      <ul class="list-style">
+        @if (!deleteSymbol) {
+          <li>
+            <mat-form-field class="form-field">
+              <mat-label i18n="@@changeSymbolWeight">Weight</mat-label>
+              <input
+                matInput
+                type="text"
+                [formControlName]="FormFields.SymbolWeight"
+                i18n-placeholder="@@changeSymbolWeight"
+                placeholder="Weight"
+                tabindex="3"
+                />
+            </mat-form-field>
+          </li>
+          <li>
+            <mat-form-field>
+              <mat-label i18n="@@changeSymbolChangeDate">change date</mat-label>
+              <input
+                matInput
+                [matDatepicker]="picker1"
+                [formControlName]="FormFields.ChangedAt"
+                />
+              <mat-datepicker-toggle
+                matSuffix
+                [for]="picker1"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #picker1></mat-datepicker>
+            </mat-form-field>
+          </li>
+        } @else {
+          <li>
+            <div class="delete-text" i18n="@@changeSymbolDeleteSymbol">
             Delete Symbol ?
           </div>
-        </li>
+          </li>
+          <li>
+            <mat-form-field>
+              <mat-label i18n="@@changeSymbolChangeDate">change date</mat-label>
+              <input
+                matInput
+                [matDatepicker]="picker1"
+                [formControlName]="FormFields.ChangedAt"
+                />
+              <mat-datepicker-toggle
+                matSuffix
+                [for]="picker1"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #picker1></mat-datepicker>
+            </mat-form-field>
+          </li>
+        }
         <li>
-          <mat-form-field>
-            <mat-label i18n="@@changeSymbolChangeDate">change date</mat-label>
-            <input
-              matInput
-              [matDatepicker]="picker1"
-              [formControlName]="FormFields.ChangedAt"
-            />
-            <mat-datepicker-toggle
-              matSuffix
-              [for]="picker1"
-            ></mat-datepicker-toggle>
-            <mat-datepicker #picker1></mat-datepicker>
-          </mat-form-field>
-        </li>
-      }
-      <li>
-        <button
-          mat-button
-          (click)="updateClick()"
+          <button
+            mat-button
+            (click)="updateClick()"
           [disabled]="
             !deleteSymbol && (symbolForm.pristine || symbolForm.invalid)
           "
-          tabindex="-1"
-          i18n="@@ok"
-        >
+            tabindex="-1"
+            i18n="@@ok"
+            >
           Ok
         </button>
-        <button
-          mat-button
-          (click)="cancelClick()"
-          tabindex="-1"
-          i18n="@@cancel"
-        >
+          <button
+            mat-button
+            (click)="cancelClick()"
+            tabindex="-1"
+            i18n="@@cancel"
+            >
           Cancel
         </button>
-        <button
-          class="delete-button"
-          mat-button
-          (click)="deleteClick()"
-          tabindex="-1"
-          i18n="@@delete"
-          *ngIf="!deleteSymbol"
-        >
+          @if (!deleteSymbol) {
+            <button
+              class="delete-button"
+              mat-button
+              (click)="deleteClick()"
+              tabindex="-1"
+              i18n="@@delete"
+              >
           Delete
         </button>
-      </li>
-    </ul>
-    <!-- {symbolForm.pristine}} {{symbolForm.valid}} -->
-  </form>
-  <div *ngIf="updatingQuotes">
-    <div class="container">
-      <div i18n="@@changeSymbolUpdatingQuotes">Updating Quotes...</div>
-    </div>
-    <div class="container">
-      <div class="content">
-        <mat-progress-spinner
-          class="example-margin"
-          mode="indeterminate"
-          color="primary"
-        ></mat-progress-spinner>
+          }
+        </li>
+      </ul>
+      <!-- {symbolForm.pristine}} {{symbolForm.valid}} -->
+    </form>
+  }
+  @if (updatingQuotes) {
+    <div>
+      <div class="container">
+        <div i18n="@@changeSymbolUpdatingQuotes">Updating Quotes...</div>
+      </div>
+      <div class="container">
+        <div class="content">
+          <mat-progress-spinner
+            class="example-margin"
+            mode="indeterminate"
+            color="primary"
+          ></mat-progress-spinner>
+        </div>
       </div>
     </div>
-  </div>
+  }
 </div>
