--- a/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
@@ -4,44 +4,50 @@
     <span class="example-fill-remaining-space"></span>
     <span class="header-space"
       ><button
-        mat-flat-button
-        color="primary"
-        (click)="showConfig()"
-        i18n="@@config"
+      mat-flat-button
+      color="primary"
+      (click)="showConfig()"
+      i18n="@@config"
       >
         Config
       </button></span
     >
-    <span class="custom-spinner header-space" *ngIf="importingSymbols">
-      <mat-progress-spinner diameter="32" mode="indeterminate" color="primary">
-      </mat-progress-spinner>
-    </span>
-    <span class="header-space" *ngIf="!!profiles && profiles.includes('dev')"
-      ><button
+    @if (importingSymbols) {
+      <span class="custom-spinner header-space">
+        <mat-progress-spinner diameter="32" mode="indeterminate" color="primary">
+        </mat-progress-spinner>
+      </span>
+    }
+    @if (!!profiles && profiles.includes('dev')) {
+      <span class="header-space"
+        ><button
         mat-flat-button
         color="primary"
         (click)="updateQuotes()"
         i18n="@@overviewUpdateQuotes"
-      >
+        >
         Update Quotes
       </button></span
-    >
-    <span class="header-space" *ngIf="!!profiles && profiles.includes('dev')"
-      ><button
+      >
+    }
+    @if (!!profiles && profiles.includes('dev')) {
+      <span class="header-space"
+        ><button
         mat-flat-button
         color="primary"
         (click)="importSymbols()"
         i18n="@@overviewImportSymbols"
-      >
+        >
         Import Symbols
       </button></span
-    >
+      >
+    }
     <span
       ><button
-        mat-flat-button
-        color="primary"
-        (click)="logout()"
-        i18n="@@logout"
+      mat-flat-button
+      color="primary"
+      (click)="logout()"
+      i18n="@@logout"
       >
         Logout
       </button></span
@@ -50,7 +56,7 @@
   <mat-sidenav-container
     class="container"
     [ngStyle]="{ 'height.px': windowHeight }"
-  >
+    >
     <mat-sidenav opened mode="side" class="portfolio-list">
       <div class="new-portfolio">
         <button
@@ -58,7 +64,7 @@
           class="button-margin"
           (click)="newPortfolio()"
           i18n="@@overviewNewPortfolio"
-        >
+          >
           New Portfolio
         </button>
         <button
@@ -66,25 +72,27 @@
           class="button-margin"
           (click)="showFinancialData()"
           i18n="@@overviewToFinancialData"
-        >
+          >
           To Financial Data
         </button>
       </div>
-      <mat-action-list *ngFor="let portfolio of portfolios">
-        <div class="portfolio-line">
-          <button mat-list-item (click)="selPortfolio(portfolio)">
-            {{ portfolio.name }}
-          </button>
-          <button
-            [disabled]="countPortfolioSymbolsByUserId > 200"
-            mat-list-item
-            (click)="addSymbol(portfolio)"
-            class="add-button"
-          >
-            <mat-icon>add</mat-icon>
-          </button>
-        </div>
-      </mat-action-list>
+      @for (portfolio of portfolios; track portfolio) {
+        <mat-action-list>
+          <div class="portfolio-line">
+            <button mat-list-item (click)="selPortfolio(portfolio)">
+              {{ portfolio.name }}
+            </button>
+            <button
+              [disabled]="countPortfolioSymbolsByUserId > 200"
+              mat-list-item
+              (click)="addSymbol(portfolio)"
+              class="add-button"
+              >
+              <mat-icon>add</mat-icon>
+            </button>
+          </div>
+        </mat-action-list>
+      }
     </mat-sidenav>
     <mat-sidenav-content opened mode="side">
       <router-outlet></router-outlet>
@@ -93,6 +101,6 @@
   <div style="display: none">
     <span id="onlineAgainMsg" i18n="@@onlineAgainMsg"
       >Your token is expired. To reconnect please logout and login again.</span
-    >
+      >
+    </div>
   </div>
-</div>
